...
    val offsetX = padding
    val offsetY = padding

    IndustrialButton(
        onClick = onClose,
        modifier = Modifier.absoluteOffset(x = offsetX.dp, y = offsetY.dp),
        text = "Give Up",
        isWarning = true,
    )
}

